# assip-2021

./: README.md  cbsclass.py  generate_data.py  requirements.txt  run.py  seed.txt  visualize.py
CodeSensor/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  kot.txt  mycells.txt  seed.txt
CodeSensor/data/: ParamsSceneMaze.txt  SceneMazeObstacles.txt  cells.txt  dists.txt  out.txt  scene.txt
CodeSensor/src/Components/: Constants.hpp  Scene.cpp  Scene.hpp  Scene2D.cpp  Scene2D.hpp  Scene3D.cpp  Scene3D.hpp  Sensor.cpp  Sensor.hpp
CodeSensor/src/Programs/: Constants.hpp  ConvertSceneToCells.cpp  Distances.cpp  GMainProgram.cpp  GManagerScene.cpp  GManagerScene.hpp  GManagerSensor.cpp  GManagerSensor.hpp  GManagerSetup.hpp  Paths.cpp  Runner.cpp  Setup.cpp  Setup.hpp
CodeSensor/src/Utils/: Algebra.cpp  Algebra.hpp  Algebra2D.hpp  Algebra3D.cpp  Algebra3D.hpp  Allocator.hpp  BinarySearch.hpp  Box2D.cpp  Box2D.hpp  Box3D.cpp  Box3D.hpp  Colormap.cpp  Colormap.hpp  Component.hpp  Constants.hpp  Container.hpp  ContainerQueue.hpp  ContainerStack.hpp  DLHandler.cpp  DLHandler.hpp  Definitions.hpp  DisjointSet.cpp  DisjointSet.hpp  Flags.hpp  GCamera.cpp  GCamera.hpp  GDraw.cpp  GDraw.hpp  GIllumination.cpp  GIllumination.hpp  GLight.hpp  GManager.cpp  GManager.hpp  GManagerComponent.cpp  GManagerComponent.hpp  GManagerComponentCamera.cpp  GManagerComponentCamera.hpp  GManagerComponentDraw.cpp  GManagerComponentDraw.hpp  GMaterial.hpp  (+44 more)
data/: input.yaml  input10_32x32_0.2_0.yaml  input1_5x5_0.1_0.yaml  input1_5x5_0.2_0.yaml  sensorTest.yaml
planner/: a_star.py  cbs.py
